--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-loading-skeleton": "^3.1.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
